@@ -236,6 +236,8 @@ protected:
       LOG(INFO) << "Shutting down slave " << slaveId
                 << " due to health check timeout";
 
+      ++metrics->slave_shutdowns_completed;
+
       dispatch(master,
                &Master::shutdownSlave,
                slaveId,
@@ -1323,6 +1325,7 @@ Nothing Master::removeSlave(const Registry::Slave& slave)
                << " within " << flags.slave_reregister_timeout
                << " after master failover; removing it from the registrar";
 
+  ++metrics->slave_shutdowns_completed;
   ++metrics->recovery_slave_removals;
 
   slaves.recovered.erase(slave.info().id());
@@ -1843,6 +1846,11 @@ void Master::_reregisterFramework(
 
     Framework* framework =
       CHECK_NOTNULL(frameworks.registered[frameworkInfo.id()]);
+
+    // Update the framework's info fields based on those passed during
+    // re-registration.
+    LOG(INFO) << "Updating info for framework " << framework->id();
+    framework->updateFrameworkInfo(frameworkInfo);
 
     framework->reregisteredTime = Clock::now();
 
